<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login_message">login</string>
    <string name="login_password">password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="Switch">What does this do?</string>
    <string name="CheckBox">CheckBox</string>
    <string name="login_hint">LoginName</string>
    <string name="login_hint2">LoginPassword</string>
    <string name="login_button">login</string>
</resources>
